Code intelligence (#55)
* feat(blast-radius): Implement initial blast radius analysis feature

This commit introduces the blast radius analysis feature, allowing users to assess the impact of schema changes.

Backend (API):
- Added  DTO to encapsulate analysis results.
- Implemented  service to calculate direct and transitive dependencies,
  affected operations, and risk level based on schema changes.
- Updated  to return a detailed breakdown including direct dependents,
  all affected schemas, and affected endpoints.

Frontend (UI):
- Integrated a new 'Blast Radius' analysis option in the .
- Developed  component to display analysis input and results.
- Added API call  in  to communicate with the backend.
- Styled the  with  for clear presentation of metrics and dependencies.

The analysis provides a summary of risk level, percentage of affected operations,
and lists direct/transitive schema dependencies and affected API endpoints.

* implemented odysseus - code intelligence

* chore: stop tracking configs

* fixed flake8 errors

* refactor

* refactor, code cleanup

* refacto

* feat: repomind support to schemasculpt, jdk 25 migration

* refactored gradle.build.kts file (#58)

* Update codeql.yml

* Update codeql.yml

* Potential fix for code scanning alert no. 19: Uncontrolled data used in path expression

Co-authored-by: Copilot Autofix powered by AI <62310815+github-advanced-security[bot]@users.noreply.github.com>

* Potential fix for code scanning alert no. 21: Information exposure through an exception

Co-authored-by: Copilot Autofix powered by AI <62310815+github-advanced-security[bot]@users.noreply.github.com>

* Potential fix for code scanning alert no. 22: Information exposure through an exception

Co-authored-by: Copilot Autofix powered by AI <62310815+github-advanced-security[bot]@users.noreply.github.com>

* fixing codeql issues

* code indentation change

* Delete repomind_proxy.py.tmp

* fix(lint): revert black reformatting to match super-linter v8.3